--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,7 +43,7 @@
       パーソナリティ情報
     </p>
     <p class='form-info-text'>
-      以下項目を登録いただくと、お客様のパーソナリティに近いユーザーの冷蔵庫の中身をチェックすることが出来ます。最も近い項目をお選びください。
+      以下項目を登録いただくと、お客様のパーソナリティに近いユーザーの冷蔵庫の中身を検索することが出来ます。最も近い項目をお選びください。
     </p>
   </div>
   <div class="form-group">
@@ -62,8 +62,7 @@
       <p class='info-text'>1週間でどのくらい外食に行くかお選びください</p>
     </div>
     <div class='input-name-wrap'>
-      <%= f.text_area :lastname_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :firstname_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+        <%= f.collection_select(:eatout_freq_id, EatoutFreq.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
     </div>
   </div>
   <div class="form-group">
@@ -72,18 +71,8 @@
       <span class="indispensable">必須</span>
       <p class='info-text'>ご家族1人あたりの食欲をお選びください</p>
     </div>
-    <div class='input-birth-wrap'>
-      <%= raw sprintf(
-                  f.date_select(
-                    :birth_date,
-                    class:'select-birth',
-                    id:"birth-date",
-                    use_month_numbers: true,
-                    prompt:'--',
-                    start_year: 1930,
-                    end_year: (Time.now.year - 5),
-                    date_separator: '%s'),
-                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+    <div class='input-name-wrap'>
+        <%= f.collection_select(:appetite_id, Appetite.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
     </div>
   </div>
   <div class="form-group">
