--- a/app/views/shared/_second-footer.html.erb
+++ b/app/views/shared/_second-footer.html.erb
@@ -1,7 +1,7 @@
 <footer class='second-fotter'>
   <div class='second-fotter-text-wrap'>
     <p class='second-fotter-text'>プライバシーポリシー</p>
-    <p class='second-fotter-text'>FURIMA利用規約</p>
+    <p class='second-fotter-text'>FRIDGE利用規約</p>
     <p class='second-fotter-text'>特定商取引に関する表記</p>
   </div>
   <%= image_tag "IMG_0096.PNG", class:"second-fotter-logo"%>
