--- a/app/assets/stylesheets/boxes/new.css
+++ b/app/assets/stylesheets/boxes/new.css
@@ -24,9 +24,11 @@
 }
 
 .items-sell-title {
-  font-size: 22px;
+  font-size: 32px;
   font-weight: bold;
   text-align: center;
+  margin-bottom: 30px;
+  color: #0099e8;
 }
 
 /* 共通 */
@@ -182,8 +184,8 @@
 }
 
 .sell-btn {
-  background: #ea352d;
-  border: 1px solid #ea352d;
+  background: #0099e8;
+  border: 1px solid #0099e8;
   color: #fff;
   width: 100%;
   height: 50px;
