add: デプロイ設定

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,13 @@
 <% model.foods.each do |food| %>
-<% if food.errors.any? %>
-    <div class="error-alert">
-      <ul>
-        <% food.errors.full_messages.each do |message| %>
-        <li class='error-message'><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+  <% if food.errors.any? %>
+    <% if food.availability %>
+      <div class="error-alert">
+        <ul>
+          <% food.errors.full_messages.each do |message| %>
+          <li class='error-message'><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
   <% end %>
 <% end %>
