add: レシピ表示機能

--- a/app/views/shared/_fields_for.html.erb
+++ b/app/views/shared/_fields_for.html.erb
@@ -13,14 +13,14 @@
 
   <tbody>
     <%= form.fields_for :foods do |f| %>
-      <tr>
+      <tr class="item-tr">
         <td><%= f.check_box :availability, {}, "true", "false" %></td>
         <td><%= f.text_field :food_title %></td>
         <td><%= f.number_field :number_title, min: 1, max: 99 %></td>
         <td><%= f.date_field :purchase_date %></td>
         <td><%= f.date_field :expiry_date %></td>
         <td><%= f.text_field :price %></td>
-        <td><%= f.hidden_field :category_id %></td>
+        <td><%= f.hidden_field :category_id, id:"send-data" %></td>
       </tr>
     <% end %>
   </tbody>
