--- a/app/assets/stylesheets/boxes/index.scss
+++ b/app/assets/stylesheets/boxes/index.scss
@@ -297,4 +297,111 @@ a {
 	border-left: 5px solid #2F70BE;
 }
 
-/* //商品一覧 */
+// Swiper①
+
+// .swiper-wrapper {
+//   /* wrapperのサイズを調整 */
+//   width: 100%;
+//   height: 300px !important;
+// }
+
+// .swiper-slide {
+//   /* スライドのサイズを調整、中身のテキスト配置調整、背景色 */
+//   color: #ffffff;
+//   width: 100%;
+//   height: 100%;
+//   text-align: center;
+//   line-height: 300px;
+//   text-align: center;
+//   font-size: 100px;
+// }
+
+// .swiper-slide:nth-child(3n + 1) {
+//   background-color: #de4439;
+// }
+
+// .swiper-slide:nth-child(3n + 2) {
+//   background-color: #fcd500;
+// }
+
+// .swiper-slide:nth-child(3n + 3) {
+//   background-color: #53c638;
+// }
+
+// .swiper-button-prev {
+//   margin:0;
+//   top: 0;
+//   left: 50%;
+//   transform: translate(-50%, 0px) rotate(90deg);
+// }
+
+// .swiper-button-next {
+//   margin:0;
+//   bottom: 0px;
+//   top: initial;
+//   left: 50%;
+//   transform: translate(-50%, 0px) rotate(90deg);
+// }
+
+// Swiper②
+/* Google Fonts読み込み */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap");
+
+/* 簡易リセットCSS */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* スライダー全体 */
+.vertical-slider {
+  width: 100%;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+}
+
+/* スライド */
+.vertical-slider__slide {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10rem;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  color: #fff;
+}
+
+/* 1枚目のスライド */
+.vertical-slider__slide:nth-child(1) {
+  background-color: #fa5457;
+}
+
+/* 2枚目のスライド */
+.vertical-slider__slide:nth-child(2) {
+  background-color: #fa8925;
+}
+
+/* 3枚目のスライド */
+.vertical-slider__slide:nth-child(3) {
+  background-color: #f6d51f;
+}
+
+/* 4枚目のスライド */
+.vertical-slider__slide:nth-child(4) {
+  background-color: #01b4bc;
+}
+
+/* 5枚目のスライド */
+.vertical-slider__slide:nth-child(5) {
+  background-color: #5fa55a;
+}
+
+/* SP時の文字サイズ調整 */
+@media (max-width: 599px) {
+  .vertical-slider__slide {
+    font-size: 16vw;
+  }
+}
