--- a/app/views/boxes/index.html.erb
+++ b/app/views/boxes/index.html.erb
@@ -1,4 +1,5 @@
 <%= render "shared/header" %>
+<% if user_signed_in? %>
 <div class='main'>
 
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
@@ -73,7 +74,7 @@
     <ul class='item-lists'>
       <% @boxes.each do |box| %>
         <li class='list'>
-          <%= link_to new_box_food_path(box.id) do %>
+          <%= link_to box_path(box.id) do %>
             <div class='item-img-content'>
               <%= image_tag box.image, class: "item-img" %>
               <h3 class='item-name'>
@@ -101,5 +102,17 @@
   </div>
   <%# /商品一覧 %>
 </div>
-
 <%= render "shared/footer" %>
+
+<% else %>
+    <div class="swiper-container vertical-slider">
+      <div class="swiper-wrapper vertical-slider__wrapper">
+        <div class="swiper-slide vertical-slider__slide">SLIDE 1</div>
+        <div class="swiper-slide vertical-slider__slide">SLIDE 2</div>
+        <div class="swiper-slide vertical-slider__slide">SLIDE 3</div>
+        <div class="swiper-slide vertical-slider__slide">SLIDE 4</div>
+        <div class="swiper-slide vertical-slider__slide">SLIDE 5</div>
+      </div>
+      <div class="swiper-pagination vertical-slider__pagination"></div>
+    </div>
+<% end %>
