--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,16 +8,7 @@
     </h1>
   </div>
 
-  <%# <%= render 'shared/error_messages', model: @user %>
-  <% if @user.errors.any? %>
-    <div class="error-alert">
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-        <li class='error-message'><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'shared/error_messages', model: @user %>
 
   <div class="form-group">
     <div class='form-text-wrap'>
