--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
     <%# jQuery CDN %>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
+    <%# ▼でcssが呼び出されている %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
   </head>
