--- a/app/views/shared/_fields_for.html.erb
+++ b/app/views/shared/_fields_for.html.erb
@@ -10,7 +10,7 @@
       <th>購入価格</th>
     </tr>
   </thead>
-
+  <%# TODO : フォーム追加できるようにする。https://web-tsuku.life/add-form-appendchild/ %>
   <tbody>
     <%= form.fields_for :foods do |f| %>
       <tr class="item-tr">
