--- a/app/assets/stylesheets/boxes/index.scss
+++ b/app/assets/stylesheets/boxes/index.scss
@@ -9,17 +9,41 @@ a {
 /* 画面上部の「人生を変えるフリマアプリ」帯部分 */
 .title-contents {
   width: 100vw;
-  background-image: image-url('fridge-top.jpeg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top center;
+  height: 500px;
   display: flex;
-  flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
-  padding: 5vh 15vw;
-  color: #fff;
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+  justify-content: space-between;
+  padding: 3vh 20vw;
+  background-color: #00A0E9;
+  margin: 5px 0;
+}
+
+.title-box {
+  width: 45%;
+  height: 100%;
+  margin: auto 0 ;
+  background-color: #EEE;
+  text-align: center;
+}
+
+.title-box>.title {
+  text-align: center;
+  font-size: 3.5vh;
+  font-weight: bold;
+  margin-top: 2vh;
+}
+
+.title-img-box {
+  width: 100%;
+  height: 80%;
+}
+
+.title-item-img{
+  padding: 1vw;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .service-title {
