--- a/app/assets/stylesheets/boxes/show.scss
+++ b/app/assets/stylesheets/boxes/show.scss
@@ -62,18 +62,22 @@
     border-right: 1px solid #50637b;
     border-left: 1px solid #222e3e;
   }
+  // activeクラス : 色を変えることで、選択されていることを表す
   .tab.active {
     background-color: #ccc;
     color: #222e3e;
     border: none;
   }
 }
+
 .content-area {
   font-size: 30px;
   text-align: center;
+  // contentクラス : display: noneなので、基本的に非表示
   .content {
     display: none;
   }
+  // showクラス : display: blockとすることで、コンテンツが表示される
   .content.show {
     margin-top: 50px;
     display: block;
@@ -97,25 +101,27 @@
 
 // ▼冷蔵庫&ユーザー情報
 .fridge-main {
-  height: 300px;
+  height: 350px;
   background-color: #00A0E9;
   display: flex;
   justify-content: space-around;
   // flex-direction: column;
   align-items: center;
   padding: 0 20vw;
-  margin: 20px auto;
+  margin: 10px auto;
 }
 
 .fridge-img{
   width: 30%;
-  height: 250px;
+  height: 80%;
   padding: 1vw;
   background-color: #EEE;
 }
 
 .item-img-content-show {
   position: relative;
+  width: 100%;
+  height: 100%;
   // background-size: cover;
 }
 
@@ -132,18 +138,22 @@
 
 .item-img-show{
   width: 100%;
-  height: auto;
+  max-width: 100%;
+  height: 100%;
+  object-fit: contain;
+  padding: 1vw;
 }
 
-.item-img-show img{
-  max-width: 100%;
-  // aspect-ratio: 4/ 3;
-  height: auto;
-}
+// .item-img-show img{
+//   max-width: 100%;
+//   // aspect-ratio: 4/ 3;
+//   height: auto;
+//   object-fit: contain;
+// }
 
 .fridge-info{
   width: 30%;
-  height: 250px;
+  height: 80%;
   // background-color: #FFF;
   font-weight: bold;
   background-color: #EEE;
@@ -163,7 +173,7 @@
 
 .user-info{
   width: 40%;
-  height: 250px;
+  height: 80%;
   padding: 1vw;
   background-color: #EEE;
 }
