add: ページネーション

--- a/app/assets/stylesheets/boxes/index.scss
+++ b/app/assets/stylesheets/boxes/index.scss
@@ -321,6 +321,16 @@ a {
 	border-left: 5px solid #2F70BE;
 }
 
+// pagination
+.foot-pagination{
+  text-align: center;
+  margin: 30px 0;
+}
+
+.page-item{
+  font-size: 20px;
+}
+
 // Swiper①
 
 // .swiper-wrapper {
