--- a/app/assets/stylesheets/boxes/show.scss
+++ b/app/assets/stylesheets/boxes/show.scss
@@ -213,14 +213,15 @@
   object-fit: cover;
 }
 
-#recipe-h1{
+#recipe-title{
+  font-size: 36px;
   font-weight: 500;
   color: #0099e8;
   padding-left: 15px;
   padding-top: 15px;
 }
 
-#recipe-p{
+#recipe-description{
   padding-left: 15px;
 }
 
