--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,86 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%# TODO : devise user controllerを生成し、redirect先などいろいろ変更する。https://qiita.com/saika_0/items/ae7c57e26037115ed2fc %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= render "shared/second-header"%>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+<div class='form-wrap'>
+  <div class='form-header'>
+    <h1 class='form-header-text'>
+      会員情報入力
+    </h1>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+  <%= render 'shared/error_messages', model: @user %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">ニックネーム</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) fridgeくん", maxlength:"40" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">メールアドレス</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
   </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">パスワード</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角数字" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">パスワード(確認)</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
   </div>
+  <div class="form-group">
+    <p class='form-info-header'>
+      パーソナリティ情報
+    </p>
+    <p class='form-info-text'>
+      以下項目を登録いただくと、お客様のパーソナリティに近いユーザーの冷蔵庫の中身を検索することが出来ます。最も近い項目をお選びください。
+    </p>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">家族構成</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <div class='input-name-wrap'>
+        <%= f.collection_select(:family_type_id, FamilyType.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">外食の頻度</label>
+      <span class="indispensable">必須</span>
+      <p class='info-text'>1週間でどのくらい外食に行くかお選びください</p>
+    </div>
+    <div class='input-name-wrap'>
+        <%= f.collection_select(:eatout_freq_id, EatoutFreq.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">一般的な食欲</label>
+      <span class="indispensable">必須</span>
+      <p class='info-text'>ご家族1人あたりの食欲をお選びください</p>
+    </div>
+    <div class='input-name-wrap'>
+        <%= f.collection_select(:appetite_id, Appetite.all, :id, :name, {}, {class:"select-box", id:"item-shipping-fee-status"}) %>
+    </div>
+  </div>
+  <div class='register-btn'>
+    <%= f.submit "情報更新" ,class:"register-red-btn" %>
+  </div>
+</div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<%= render "shared/second-footer"%>
