--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -1,27 +1,63 @@
 /* ユーザー情報エリア */
 .user-main {
-  height: 350px;
   width: 100%;
+  min-width: 800px;
+  height: 100%;
   background-color: #00A0E9;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  /* padding: 0 20vw;
-  margin: 10px auto; */
+  justify-content: center;
 }
 
-.user-main-info{
-  width: 40%;
-  height: 80%;
+.user-info-wrap{
+  width: 30%;
+  height: 100%;
+  background-color: #EEEEEE;
+  margin: 1vw;
+  border-radius: 5px;
+}
+
+.user-header-info{
+  width: 100%;
+  height: 15%;
   padding: 1vw;
-  background-color: #EEE;
+  /* background-color:white; */
+  text-align: center;
+  border-radius: 5px 5px 0 0;
 }
 
-.user-name{
-  height: 30%;
-  background-color: #FFF;
-  margin-bottom: 5px;
+.user-header-text{
+  /* line-height: 100px; */
+  /* border-bottom: 1px solid #f5f5f5; */
+  font-weight: bold;
+}
+
+.user-middle-info{
+  width: 100%;
+  padding-top: 1vw;
+  text-align: center;
+}
+
+.user-middle-text{
+  font-weight: bold;
+}
+
+.user-group{
+  width: 80%;
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  margin: 2.5px auto;
   padding:1vw;
+}
+
+.user-text-wrap {
+  width: 100%;
+  height: 20%;
+}
+
+.user-text {
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .user-personal{
@@ -40,7 +76,7 @@
 }
 
 .user-edit-btn{
-  width: 50%;
+  width: 80%;
   background: #aaa;
   border: 1px solid #aaa;
   color: #fff;
@@ -52,9 +88,10 @@
 }
 
 /* 冷蔵庫エリア */
-.box-contents{
-  width: 40%;
-  height: 80%;
-  background-color: #FFF;
-  /* padding: 10vh 0; */
+.user-box-wrap{
+  width: 60%;
+  height: 100%;
+  background-color: #EEEEEE;
+  margin: 1vw;
+  border-radius: 5px;
 }
