--- a/app/assets/stylesheets/boxes/index.scss
+++ b/app/assets/stylesheets/boxes/index.scss
@@ -9,7 +9,7 @@ a {
 /* 画面上部の「人生を変えるフリマアプリ」帯部分 */
 .title-contents {
   width: 100vw;
-  height: 500px;
+  // height: 500px;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
