--- a/app/assets/stylesheets/boxes/show.scss
+++ b/app/assets/stylesheets/boxes/show.scss
@@ -109,31 +109,62 @@
 
 // ▼冷蔵庫&ユーザー情報
 .fridge-main {
-  height: 350px;
+  width: 100vw;
+  height: 60vh;
   background-color: #00A0E9;
+  margin-top: 10px;
   display: flex;
-  justify-content: space-around;
-  // flex-direction: column;
-  align-items: center;
-  padding: 0 20vw;
-  margin: 10px auto;
+  justify-content: center;
 }
 
-.fridge-img{
-  width: 30%;
+.fridge-wrap{
+  width: 50%;
+  height: 90%;
+  background-color: #EEEEEE;
+  border-radius: 5px;
+  margin: auto 0;
+  // box-sizing: content-box;
+}
+
+.fridge-header-info{
+  padding-top: 10px;
+}
+
+.fridge-header-text{
+  font-size: 5vh;
+  text-align: center;
+}
+
+.fridge-nav{
+  width: 85%;
   height: 80%;
-  padding: 1vw;
-  background-color: #EEE;
+  margin: 0 auto;
+  display: flex;
+  // justify-content: space-between;
 }
 
-.item-img-content-show {
+.fridge-nav>.item-img-content-show{
   position: relative;
   width: 100%;
   height: 100%;
-  // background-size: cover;
+  background-size: cover;
+  margin-right: 30px;
 }
 
-.item-img-content-show h3{
+.box-item-img{
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  object-fit: contain;
+  padding: 1vw;
+}
+
+.fridge-nav>.user-group{
+  width: 70%;
+  height: 90%;
+}
+
+.fridge-nav>.item-img-content-show h3{
   position: absolute;
   color: #fff;
   top: 0;
@@ -144,39 +175,46 @@
   padding: 0 10px;
 }
 
+.fridge-info{
+  width: 100%;
+  height: 90%;
+  padding: 1vw;
+}
+
+.fridge-info>.user-group{
+  width: 100%;
+}
+
 .item-img-show{
   width: 100%;
   max-width: 100%;
-  height: 100%;
+  // height: 100%;
   object-fit: contain;
   padding: 1vw;
 }
 
-// .item-img-show img{
-//   max-width: 100%;
-//   // aspect-ratio: 4/ 3;
-//   height: auto;
-//   object-fit: contain;
-// }
+.fridge-group{
+  width: 80%;
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  margin: 2.5px auto;
+  padding:1vw;
+}
 
-.fridge-info{
-  width: 30%;
-  height: 80%;
-  // background-color: #FFF;
+.fridge-text-wrap {
+  width: 100%;
+  height: 20%;
+}
+
+.fridge-text {
+  font-size: 16px;
   font-weight: bold;
-  background-color: #EEE;
-  padding: 1vw;
 }
 
-.fridge-info>.item-info {
-  background-color: #FFF;
-  color: black;
-  padding: 1vw;
-  margin: 5px;
-}
-
-.fridge-info>.item-info p{
-  margin-bottom: 5px;
+.fridge-main>.user-info-wrap{
+  height: 90%;
+  margin: auto 10px;
 }
 
 .user-info{
