--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -22,8 +22,9 @@ html {
   align-items: center;
 }
 
-.furima-icon {
+.fridge-icon {
   width: 20vw;
+  min-width: 200px;
   margin-right: 10vw;
 }
 
