--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to image_tag("IMG_0096.PNG", class:"furima-icon"), "/" %>
+    <%= link_to image_tag("IMG_0096.PNG", class:"fridge-icon"), "/" %>
     <form class="search-form" action="#">
       <input class='input-box' placeholder='冷蔵庫を探す'>
       <button id="search-btn"><i class="fa-solid fa-magnifying-glass my-glass"></i></button>
