--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -47,7 +47,7 @@
 
       <div class="sell-btn-contents">
         <%= form.submit "登録する" ,class:"sell-btn", id:"food-btn" %>
-        <%=link_to 'もどる', root_path, class:"back-btn" %>
+        <%=link_to 'もどる', root_path, class:"back-btn-new" %>
       </div>
     <% end %>
   </div>
