--- a/app/views/boxes/show.html.erb
+++ b/app/views/boxes/show.html.erb
@@ -78,26 +78,26 @@
   </div>
 
   <div class='item-contents'>
-    <% if @foods.present? %>
-      <div class="subtitle" ><%= @box.box_title %>の食材一覧
+  <% if @foods.present? %>
+    <div class="subtitle" ><%= @box.box_title %>の食材一覧
+    </div>
+    <div class="tab-area">
+      <div class="tab active" id="tab-fish-show">
+        <i class="fa-solid fa-fish fa-2x"></i>Fish
       </div>
-      <div class="tab-area">
-        <div class="tab active" id="tab-fish-show">
-          <i class="fa-solid fa-fish fa-2x"></i>Fish
-        </div>
-        <div class="tab" id="tab-veg-show">
-          <i class="fa-solid fa-carrot fa-2x"></i>Vegitable
-        </div>
-        <div class="tab" id="tab-meat-show">
-          <i class="fa-solid fa-cow fa-2x"></i>Meat
-        </div>
-        <div class="tab" id="tab-drink-show">
-          <i class="fa-solid fa-wine-bottle fa-2x"></i>Drink
-        </div>
-        <div class="tab" id="tab-ice-show">
-          <i class="fa-solid fa-ice-cream fa-2x"></i>Flozen
-        </div>
+      <div class="tab" id="tab-veg-show">
+        <i class="fa-solid fa-carrot fa-2x"></i>Vegitable
       </div>
+      <div class="tab" id="tab-meat-show">
+        <i class="fa-solid fa-cow fa-2x"></i>Meat
+      </div>
+      <div class="tab" id="tab-drink-show">
+        <i class="fa-solid fa-wine-bottle fa-2x"></i>Drink
+      </div>
+      <div class="tab" id="tab-ice-show">
+        <i class="fa-solid fa-ice-cream fa-2x"></i>Flozen
+      </div>
+    </div>
       <div class="content-area">
         <%# ▼食材表示部分 %>
         <div class="content show">
@@ -126,19 +126,14 @@
 
 
     <% else %>
-      <div class="items-sell-main">
-        <div class="subtitle" ><%= @box.box_title %>の食材を登録しましょう!!
-        </div>
-
-        <div class="sell-btn-contents">
-          <div class="sell-btn1">
-            <%= link_to "食材登録", new_box_food_path(@box.id), data: {"turbolinks" => false }, class:"sell-btn" %>
-          </div>
-          <div class="back-btn1">
-            <%= link_to 'もどる', root_path, class:"back-btn" %>
-          </div>
-        </div>
+    <div class="items-sell-main">
+      <div class="subtitle" ><%= @box.box_title %>の食材が登録されていません
       </div>
+      <div class="sell-btn-contents">
+        <%= link_to "食材を登録しましょう!", new_box_food_path(@box.id), data: {"turbolinks" => false }, class:"sell-btn" %>
+        <%= link_to 'もどる', root_path, class:"back-btn-show" %>
+      </div>
+    </div>
     <% end %>
   </div>
 <%= render "shared/footer" %>
