add: formオブジェクト微修正

--- a/app/views/boxes/edit.html.erb
+++ b/app/views/boxes/edit.html.erb
@@ -1,8 +1,7 @@
 <%= render "shared/header" %>
 
 <div class="item-contents">
-  <h2 class="items-sell-title">冷蔵庫に食材 <i class="fa-solid fa-box-archive"></i> を登録しよう</h2>
-  <h3>STEP1 : 登録する食材のカテゴリを選ぼう!</h3>
+  <h2 class="items-sell-title">冷蔵庫 <i class="fa-solid fa-box-archive"></i> の食材を編集します</h2>
   <div class="tab-area">
     <div class="tab" id="tab-fish" data-value='1' >
       <i class="fa-solid fa-fish fa-2x"></i>Fish
@@ -22,9 +21,8 @@
   </div>
 
   <div class="content-area">
-    <%= form_with model: @form, url: edit_box_path, method: :post, local: true do |form| %>
+    <%= form_with model: @form, url: box_path, method: :PATCH, local: true do |form| %>
       <%= render 'shared/foods_error_messages', model: @form %>
-        <%# TODO : フォーム追加できるようにする。https://web-tsuku.life/add-form-appendchild/ %>
       <div class="content">
         <%= render partial: 'shared/fields_for', locals:{ form: form, i: 1 } %>
       </div>
