--- a/app/views/boxes/index.html.erb
+++ b/app/views/boxes/index.html.erb
@@ -19,6 +19,8 @@
     </div>
   </div>
   
+<% end %>
+
   <%# 冷蔵庫一覧 %>
   <div class='item-contents'>
     <h2 class='title'>みんなのMY FRiDGE</h2>
@@ -63,8 +65,8 @@
 
 <%= render "shared/footer" %>
 
-<% else %>
-    <div class="swiper-container vertical-slider">
+<%# <% else %>
+    <%# <div class="swiper-container vertical-slider">
       <div class="swiper-wrapper vertical-slider__wrapper">
         <div class="swiper-slide vertical-slider__slide">SLIDE 1</div>
         <div class="swiper-slide vertical-slider__slide">SLIDE 2</div>
@@ -73,5 +75,5 @@
         <div class="swiper-slide vertical-slider__slide">SLIDE 5</div>
       </div>
       <div class="swiper-pagination vertical-slider__pagination"></div>
-    </div>
-<% end %>
+    </div> %>
+<%# <% end %>
